[gd_scene load_steps=20 format=2]

[ext_resource path="res://src/ui/hud/pause_break.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/ui/menus/popup/options.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/ui/menus/title_screen.gd" type="Script" id=4]
[ext_resource path="res://src/ui/components/reactive_button.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/sounds/musics/Overcooked - Main Menu Remix.ogg" type="AudioStream" id=6]
[ext_resource path="res://assets/sounds/fxs/AreYouReady_Martian.WAV" type="AudioStream" id=7]
[ext_resource path="res://assets/fonts/COMICNEUE_BOLD.OTF" type="DynamicFontData" id=8]
[ext_resource path="res://assets/sprites/hud/version.png" type="Texture" id=9]
[ext_resource path="res://assets/sounds/fxs/Morphine - Loose Strings.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/sounds/fxs/Select 3 (Blub).wav" type="AudioStream" id=11]

[sub_resource type="DynamicFont" id=1]
size = 73
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=2]
resource_name = "rainbow"
length = 1.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.921569, 1, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 0.0313726, 0, 1, 1 ), Color( 0.921569, 1, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.35, 1.15 ),
"transitions": PoolRealArray( 0.329877, 0.329877 ),
"update": 0,
"values": [ 1.0, -1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_pivot_offset")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.75, 1.5 ),
"transitions": PoolRealArray( 0.341509, 0.353554, 0.307786 ),
"update": 0,
"values": [ Vector2( 577, 37 ), Vector2( 193, 37 ), Vector2( 577, 37 ) ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 1.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.05, 0.55, 1.05, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 1, 0.717647, 1 ), Color( 1, 0.890196, 0, 1 ), Color( 0.568627, 0, 1, 1 ), Color( 0, 1, 0.717647, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.35, 1.15 ),
"transitions": PoolRealArray( 0.329877, 0.329877 ),
"update": 0,
"values": [ 1.0, -1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_pivot_offset")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.75, 1.5 ),
"transitions": PoolRealArray( 0.341509, 0.353554, 0.307786 ),
"update": 0,
"values": [ Vector2( 577, 37 ), Vector2( 193, 37 ), Vector2( 577, 37 ) ]
}

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
length = 1.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.05, 0.55, 1.05, 1.55 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.890196, 0, 1 ), Color( 0.568627, 0, 1, 1 ), Color( 0, 1, 0.717647, 1 ), Color( 1, 0.890196, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.35, 1.15 ),
"transitions": PoolRealArray( 0.329877, 0.329877 ),
"update": 0,
"values": [ 1.0, -1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_pivot_offset")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.75, 1.5 ),
"transitions": PoolRealArray( 0.341509, 0.353554, 0.307786 ),
"update": 0,
"values": [ Vector2( 577, 37 ), Vector2( 193, 37 ), Vector2( 577, 37 ) ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Audio/NewGameSFX:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=9]
tracks/0/type = "value"
tracks/0/path = NodePath("MainMenu:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 2.46229, 0.5 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="TitleScreen" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="MainMenu" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
margin_left = 120.0
margin_top = 80.0
margin_right = 904.0
margin_bottom = 496.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="Label" parent="MainMenu/VBoxContainer"]
margin_right = 770.0
margin_bottom = 74.0
rect_min_size = Vector2( 770, 74 )
rect_pivot_offset = Vector2( 577, 37 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_fonts/font = SubResource( 1 )
text = "GAME_NAME"

[node name="AnimationPlayer" type="AnimationPlayer" parent="MainMenu/VBoxContainer/Title"]
autoplay = "rainbow"
anims/rainbow = SubResource( 2 )

[node name="MenuOptions" type="VBoxContainer" parent="MainMenu/VBoxContainer"]
margin_top = 78.0
margin_right = 784.0
margin_bottom = 333.0
size_flags_vertical = 3
custom_constants/separation = 30
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" parent="MainMenu/VBoxContainer/MenuOptions" instance=ExtResource( 5 )]
focus_neighbour_top = NodePath("../Options")

[node name="Continue" parent="MainMenu/VBoxContainer/MenuOptions" instance=ExtResource( 5 )]
margin_top = 103.0
margin_right = 223.0
margin_bottom = 152.0
text = "CONTINUE"

[node name="AnimationPlayer" parent="MainMenu/VBoxContainer/MenuOptions/Continue" index="1"]
anims/idle = SubResource( 3 )
anims/rainbow = SubResource( 4 )

[node name="Options" parent="MainMenu/VBoxContainer/MenuOptions" instance=ExtResource( 5 )]
margin_top = 182.0
margin_right = 190.0
margin_bottom = 231.0
focus_neighbour_bottom = NodePath("../NewGame")
text = "OPTIONS"

[node name="AnimationPlayer" parent="MainMenu/VBoxContainer/MenuOptions/Options" index="1"]
anims/idle = SubResource( 5 )
anims/rainbow = SubResource( 6 )

[node name="VersionNote" type="TextureRect" parent="MainMenu/VBoxContainer"]
margin_top = 337.0
margin_right = 784.0
margin_bottom = 416.0
texture = ExtResource( 9 )

[node name="Select" type="AudioStreamPlayer" parent="MainMenu"]
stream = ExtResource( 11 )
bus = "SFXS"

[node name="Transition" type="AnimationPlayer" parent="MainMenu"]
autoplay = "in"
anims/in = SubResource( 7 )
anims/out = SubResource( 8 )

[node name="Options" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -63.5
margin_right = 125.0
margin_bottom = 63.5

[node name="PauseBreak" parent="." instance=ExtResource( 1 )]

[node name="Audio" type="Node" parent="."]

[node name="NewGameSFX" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 7 )
bus = "SFXS"

[node name="NotImplementedSFX" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 10 )
bus = "SFXS"

[node name="Music" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 6 )
bus = "Music"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "fade_in"
anims/fade_in = SubResource( 9 )
[connection signal="pressed" from="MainMenu/VBoxContainer/MenuOptions/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/MenuOptions/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/MenuOptions/Options" to="." method="_on_Options_pressed"]
[connection signal="animation_finished" from="MainMenu/Transition" to="." method="_on_Transition_animation_finished"]

[editable path="MainMenu/VBoxContainer/MenuOptions/Continue"]

[editable path="MainMenu/VBoxContainer/MenuOptions/Options"]

[editable path="PauseBreak"]
